--- a/HelloWorld/Docuflo-Info.plist
+++ b/HelloWorld/Docuflo-Info.plist
@@ -8,8 +8,15 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon-40@2x-2.png</string>
+		<string>Icon-60@2x.png</string>
+		<string>Icon-60@3x-1.png</string>
+		<string>Icon-40@2x-1.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.appcoda.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>DocufloMS</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
